--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                 <ul>
                     <li class="footer__icon">
                         <a href="https://facebook.com/loshorneritos.tallerprotegido" target="_blank">
-                            <img src="./assets/images/FB.svg" alt="Facebook" class="imgicon">
+                            <img src="./assets/images/FB.png" alt="Facebook" class="imgicon">
                         </a>
                     </li>
                     <li class="footer__icon">
                         <a href="https://instagram.com" target="_blank">
-                            <img src="./assets/images/IG.svg" alt="Instagram" class="imgicon">
+                            <img src="./assets/images/IG.png" alt="Instagram" class="imgicon">
                         </a>
                     </li>
                 </ul>
